--- a/{{cookiecutter.github_repo_name}}/.github/workflows/sam-pipeline.yml
+++ b/{{cookiecutter.github_repo_name}}/.github/workflows/sam-pipeline.yml
@@ -11,8 +11,10 @@ jobs:
       - uses: aws-actions/setup-sam@v1
       - uses: aws-actions/configure-aws-credentials@v1
         with:
-          #aws-access-key-id:
-          #aws-secret-access-key:
+{% raw %}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+{% endraw %}
           aws-region: ##region##
       # sam build
       - run: sam build --use-container
